Fix Wages For Shifts With No User

--- a/app/assets/stylesheets/application/base/forms.scss
+++ b/app/assets/stylesheets/application/base/forms.scss
@@ -73,7 +73,7 @@ form {
     font-size: 14px;
     line-height: $input-line-height;
     max-width: 400px;
-    min-width: 110px;
+    min-width: 100px;
     padding: 6px 10px;
     width: 100%;
 
