--- a/app/assets/stylesheets/application/components/datepicker_range.scss
+++ b/app/assets/stylesheets/application/components/datepicker_range.scss
@@ -8,7 +8,7 @@
 
   input {
     display: inline-block;
-    margin-right: 20px;
+    // margin-right: 20px;
     max-width: 180px;
 
     &:first-child {
